[package]
name = "orderbook"
authors = ["Daniel Lopez <dlope073@gmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = ["cargo"] } # Provides command line argument interface
